_assets/stylesheets/pages/about/our_work.scss
#our-work {

  .client-logo-container {
    padding: 2em 1em;
  }
  
  #sickkids {
    width: 65%;
  }
  
  #uhn {
    width: 75%;
  }
  
  .case-study-cards {
    margin-bottom: 3.5em;
  }
  
  .case-study-card {
    padding: 3em;
    
    &:hover {
      .case-study-card-logo {
        -webkit-filter: invert(82%);
        filter: invert(82%);
      }
      
      .case-study-card-background {
        max-height: 100%;
      }
    }
    
    &[data-color="yellow"] {
      .case-study-card-background {
        background-color: $yellow;
      }
    }
    
    &[data-color="blue"] {
      .case-study-card-background {
        background-color: $blue;
      }
    }
    
    &[data-color="orange"] {
      .case-study-card-background {
        background-color: $orange;
      }
    }
    
    &[data-color="teal"] {
      .case-study-card-background {
        background-color: $teal;
      }
    }
  }
  
  .case-study-card-wrapper {
    padding: 1.0em;
  }
  
  .case-study-card-logo {
    -webkit-filter: invert(0%);
    filter: invert(0%);
    transition: -webkit-filter $transition-duration, filter $transition-duration;
  }

  .case-study-card-logo-wrapper {
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  
  .case-study-card-background {
    overflow: hidden;
    position: absolute;
    width: 100%;
    height: 100%;
    max-height: 0;
    bottom: 0;
    left: 0;
    transition: max-height $transition-duration;
    text-align: right;
    
    i { 
      padding: 15px;
      font-size: 1.2em;
      position: absolute;
      bottom: 0;
      right: 0;
    }
  }
}

